Modificada y terminada la interface del proyecto.
Terminada la interface del proyecto.

--- a/README
+++ b/README
@@ -12,8 +12,7 @@ ardu-mrua 0.1
 1. Introducción
 ****************************************************************************************************************
 
-Proyecto desarrollado en el curso de Arquitectura de Computadoras (ARC115) de la Escuela de Sistemas Informáticos de la
-Facultad de Ingeniería y Arquitectura de la Universidad de El Salvador (UES).
+Proyecto desarrollado en el curso de Arquitectura de Computadoras (ARC115) de la Escuela de Sistemas Informáticos de la Facultad de Ingeniería y Arquitectura de la Universidad de El Salvador (UES).
 
 Este codigo acompaña al prototipo (hardware) para ser usado en practicas de Movimiento Rectilineo Uniformemente Acelerado,
 este codigo servira para controlar el prototipo ademas nos permitira realizar análisis matematicos de las variables
